--- a/memberanalytics/templates/memberanalytics/base.html
+++ b/memberanalytics/templates/memberanalytics/base.html
@@ -1,11 +1,11 @@
 {% extends 'allianceauth/base.html' %}
 {% load i18n %}
 
-{% block page_title %}{% translate "example" %}{% endblock %}
+{% block page_title %}{% translate "Member Analytics" %}{% endblock %}
 
 {% block content %}
     <div class="allianceauth-example-plugin">
-        <h1 class="page-header text-center">{% translate "example" %}</h1>
+        <h1 class="page-header text-center">{% translate "Member Analytics" %}</h1>
 
         {% block details %}{% endblock %}
     </div>
